[package]
name = "neku-sa-yoli"
version = "0.1.0"
edition = "2024"

[dependencies]
rigs = "0.0.8"
tokio = { version = "1.51.1", features = ["full"] }
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.10", features = ["fs"] }
futures-util = "0.3.32"
ed25519-dalek = "2.2.0"
